@@ -4,14 +4,16 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.awaitility.Awaitility.await;
 import static uk.gov.justice.laa.dstew.access.testutils.ApplicationCreateRequestFixture.validCreateApplicationRequest;
-import static uk.gov.justice.laa.dstew.access.testutils.ApplicationCreateRequestFixture.validLinkedCreateApplicationRequest;
 
+import jakarta.annotation.PostConstruct;
 import java.io.IOException;
+import java.math.BigDecimal;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.OffsetDateTime;
 import java.util.Comparator;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -26,8 +28,8 @@ import java.util.regex.Pattern;
 import java.util.stream.Stream;
 import org.axonframework.eventsourcing.eventstore.EventStorageEngine;
 import org.axonframework.eventsourcing.eventstore.jpa.AggregateBasedJpaEventStorageEngine;
+import org.axonframework.messaging.commandhandling.gateway.CommandGateway;
 import org.axonframework.messaging.queryhandling.gateway.QueryGateway;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.resttestclient.TestRestTemplate;
@@ -62,7 +64,6 @@ import uk.gov.justice.laa.dstew.access.model.AutoGrantOutcome;
 import uk.gov.justice.laa.dstew.access.model.AutoGranted;
 import uk.gov.justice.laa.dstew.access.model.AutoGrantedOutcomeRequest;
 import uk.gov.justice.laa.dstew.access.model.BillingType;
-import uk.gov.justice.laa.dstew.access.model.CaseworkerAssignRequest;
 import uk.gov.justice.laa.dstew.access.model.CaseworkerUnassignRequest;
 import uk.gov.justice.laa.dstew.access.model.CategoryOfLaw;
 import uk.gov.justice.laa.dstew.access.model.CreateNoteRequest;
@@ -84,14 +85,13 @@ import uk.gov.justice.laa.dstew.access.model.PriorAuthorityType;
 import uk.gov.justice.laa.dstew.access.model.ProviderResponse;
 import uk.gov.justice.laa.dstew.access.model.ScopeLimitationResponse;
 import uk.gov.justice.laa.dstew.access.model.WorkListAssignRequest;
+import uk.gov.justice.laa.dstew.access.model.WorkListUnassignRequest;
 import uk.gov.justice.laa.dstew.access.query.application.ApplicationReadModel;
-import uk.gov.justice.laa.dstew.access.query.application.ApplicationReadRepository;
-import uk.gov.justice.laa.dstew.access.query.application.FindApplicationByIdQuery;
 import uk.gov.justice.laa.dstew.access.query.application.history.ApplicationHistoryReadModel;
 import uk.gov.justice.laa.dstew.access.query.application.history.ApplicationHistoryReadRepository;
 import uk.gov.justice.laa.dstew.access.query.application.history.PriorAuthorityHistoryReadRepository;
-import uk.gov.justice.laa.dstew.access.query.application.linkedgroup.LinkedApplicationGroupReadRepository;
 import uk.gov.justice.laa.dstew.access.testsupport.TestJwtDecoderConfig;
+import util.ProjectionAwaiter;
 
 @Testcontainers
 @SpringBootTest(
@@ -115,17 +115,22 @@ class PostgresAxonIntegrationTest {
 
   @Autowired private JdbcTemplate jdbcTemplate;
 
-  @Autowired private ApplicationReadRepository applicationReadRepository;
-
   @Autowired private ApplicationHistoryReadRepository applicationHistoryReadRepository;
 
   @Autowired private PriorAuthorityHistoryReadRepository priorAuthorityHistoryReadRepository;
 
-  @Autowired private LinkedApplicationGroupReadRepository groupReadRepository;
+  @Autowired private CommandGateway commandGateway;
 
   @Autowired private QueryGateway queryGateway;
 
   @Autowired private Environment environment;
+
+  private ProjectionAwaiter projectionAwaiter;
+
+  @PostConstruct
+  void initialiseProjectionAwaiter() {
+    projectionAwaiter = new ProjectionAwaiter(queryGateway);
+  }
 
   @Test
   void givenPostgresAxonStore_whenHealthRequested_thenReportsUp() {
@@ -191,9 +196,9 @@ class PostgresAxonIntegrationTest {
         .containsExactly(
             "application_current_state",
             "application_data",
+            "application_group_route",
             "application_history",
             "application_list_index",
-            "caseworkers",
             "domain_event_entry",
             "flyway_schema_history",
             "linked_application_group_current_state",
@@ -219,11 +224,10 @@ class PostgresAxonIntegrationTest {
   }
 
   @Test
-  void givenApplicationData_whenMutated_thenOnlyControlledRetentionDeleteIsAllowed()
-      throws Exception {
+  void givenApplicationData_whenMutated_thenOnlyControlledRetentionDeleteIsAllowed() {
     UUID applicationId = UUID.randomUUID();
     applicationId(post(validCreateApplicationRequest(applicationId, UUID.randomUUID()), headers()));
-    awaitProjection(applicationId);
+    projectionAwaiter.awaitApplication(applicationId);
 
     assertThat(
             jdbcTemplate.queryForObject(
@@ -287,8 +291,7 @@ class PostgresAxonIntegrationTest {
   }
 
   @Test
-  void givenValidRequest_whenPostApplication_thenPersistsEventAndCurrentStateProjection()
-      throws Exception {
+  void givenValidRequest_whenPostApplication_thenPersistsEventAndCurrentStateProjection() {
     UUID applicationId = UUID.randomUUID();
     UUID applyProceedingId = UUID.randomUUID();
     HttpHeaders headers = new HttpHeaders();
@@ -307,7 +310,7 @@ class PostgresAxonIntegrationTest {
     UUID createdApplicationId = applicationId(response);
     assertThat(createdApplicationId).isEqualTo(applicationId);
 
-    ApplicationReadModel projected = awaitProjection(createdApplicationId);
+    ApplicationReadModel projected = projectionAwaiter.awaitApplication(createdApplicationId);
     assertThat(projected.getApplicationId()).isEqualTo(createdApplicationId);
     assertThat(projected.getStatus()).isEqualTo("APPLICATION_SUBMITTED");
     assertThat(projected.getLaaReference()).isEqualTo("LAA-123");
@@ -365,18 +368,17 @@ class PostgresAxonIntegrationTest {
   }
 
   @Test
-  void givenApplicationInProgress_whenUpdatedToSubmitted_thenPersistsThinEventAndDataAtomically()
-      throws Exception {
+  void givenApplicationInProgress_whenUpdatedToSubmitted_thenPersistsThinEventAndDataAtomically() {
     UUID applicationId = UUID.randomUUID();
     ApplicationCreateRequest submitted =
         validCreateApplicationRequest(applicationId, UUID.randomUUID());
     applicationId(post(inProgress(submitted), headers()));
-    awaitProjection(applicationId);
+    projectionAwaiter.awaitApplication(applicationId);
 
     ResponseEntity<Void> response = patchSubmitted(applicationId, submitted);
 
     assertThat(response.getStatusCode()).isEqualTo(HttpStatus.NO_CONTENT);
-    ApplicationReadModel projected = awaitProjectionVersion(applicationId, 1L);
+    ApplicationReadModel projected = projectionAwaiter.awaitApplicationVersion(applicationId, 1L);
     assertThat(projected.getStatus()).isEqualTo("APPLICATION_SUBMITTED");
     assertThat(projected.getAutoGranted()).isEqualTo(AutoGrantedState.PENDING);
     assertThat(
@@ -402,13 +404,12 @@ class PostgresAxonIntegrationTest {
   }
 
   @Test
-  void givenEventAppendFails_whenApplicationUpdated_thenImmutableDataAppendRollsBack()
-      throws Exception {
+  void givenEventAppendFails_whenApplicationUpdated_thenImmutableDataAppendRollsBack() {
     UUID applicationId = UUID.randomUUID();
     ApplicationCreateRequest submitted =
         validCreateApplicationRequest(applicationId, UUID.randomUUID());
     applicationId(post(inProgress(submitted), headers()));
-    awaitProjection(applicationId);
+    projectionAwaiter.awaitApplication(applicationId);
     jdbcTemplate.execute(
         """
         CREATE OR REPLACE FUNCTION axon.reject_test_application_update()
@@ -457,24 +458,22 @@ class PostgresAxonIntegrationTest {
                 Integer.class,
                 applicationId.toString()))
         .isEqualTo(1);
-    assertThat(awaitProjection(applicationId).getApplicationVersion()).isZero();
+    assertThat(projectionAwaiter.awaitApplication(applicationId).getApplicationVersion()).isZero();
   }
 
   @Test
-  void givenApplication_whenMakeDecision_thenAppendsSensitiveVersionAndThinEvent()
-      throws Exception {
+  void givenApplication_whenMakeDecision_thenAppendsSensitiveVersionAndThinEvent() {
     UUID applicationId = UUID.randomUUID();
     UUID applyProceedingId = UUID.randomUUID();
     applicationId(post(validCreateApplicationRequest(applicationId, applyProceedingId), headers()));
-    ApplicationReadModel created = awaitProjection(applicationId);
+    ApplicationReadModel created = projectionAwaiter.awaitApplication(applicationId);
     markReadyForManualDecision(applicationId);
-    UUID caseworkerId = assignForManualDecision(applicationId);
+    assignForManualDecision(applicationId);
     UUID proceedingId = created.getProceedings().getFirst().getId();
 
     MakeDecisionRequest request =
         MakeDecisionRequest.builder()
             .applicationVersion(1L)
-            .caseworkerId(caseworkerId)
             .overallDecision(DecisionStatus.REFUSED)
             .eventHistory(
                 EventHistoryRequest.builder().eventDescription("Decision recorded").build())
@@ -499,7 +498,7 @@ class PostgresAxonIntegrationTest {
             Void.class);
 
     assertThat(response.getStatusCode()).isEqualTo(HttpStatus.NO_CONTENT);
-    ApplicationReadModel decided = awaitProjectionVersion(applicationId, 2L);
+    ApplicationReadModel decided = projectionAwaiter.awaitApplicationVersion(applicationId, 2L);
     assertThat(decided.getDecisionStatus()).isEqualTo("REFUSED");
     assertThat(decided.getAutoGranted()).isEqualTo(AutoGrantedState.MANUAL);
     assertThat(decided.getMeritsDecisions().get(proceedingId).justification())
@@ -542,7 +541,7 @@ class PostgresAxonIntegrationTest {
     assertThat(historyResponse.getBody().getEvents())
         .singleElement()
         .satisfies(event -> assertThat(event.getEventDescription()).isEqualTo("Decision recorded"));
-    ApplicationResponse application = awaitGet(applicationId).getBody();
+    ApplicationResponse application = awaitGetApplication(applicationId).getBody();
     assertThat(application.getDecisionStatus()).isEqualTo(DecisionStatus.REFUSED);
     assertThat(application.getAutoGranted()).isEqualTo(AutoGranted.MANUAL);
     assertThat(application.getVersion()).isEqualTo(2L);
@@ -565,11 +564,11 @@ class PostgresAxonIntegrationTest {
   }
 
   @Test
-  void givenSubmittedApplication_whenAutomaticallyGranted_thenPersistsCompleteDecision()
-      throws Exception {
+  void givenSubmittedApplication_whenAutomaticallyGranted_thenPersistsCompleteDecision() {
     UUID applicationId = UUID.randomUUID();
     applicationId(post(validCreateApplicationRequest(applicationId, UUID.randomUUID()), headers()));
-    UUID proceedingId = awaitProjection(applicationId).getProceedings().getFirst().getId();
+    UUID proceedingId =
+        projectionAwaiter.awaitApplication(applicationId).getProceedings().getFirst().getId();
     var request =
         new AutoGrantedOutcomeRequest(
             AutoGrantOutcome.AUTOGRANTED, Map.of("certificateNumber", "AUTO-2126"));
@@ -586,7 +585,7 @@ class PostgresAxonIntegrationTest {
             Void.class);
 
     assertThat(response.getStatusCode()).isEqualTo(HttpStatus.NO_CONTENT);
-    ApplicationReadModel granted = awaitProjectionVersion(applicationId, 1L);
+    ApplicationReadModel granted = projectionAwaiter.awaitApplicationVersion(applicationId, 1L);
     assertThat(granted.getAutoGranted()).isEqualTo(AutoGrantedState.AUTOGRANTED);
     assertThat(granted.getDecisionStatus()).isEqualTo("GRANTED");
     assertThat(granted.getMeritsDecisions()).containsKey(proceedingId);
@@ -600,11 +599,10 @@ class PostgresAxonIntegrationTest {
   }
 
   @Test
-  void givenSubmittedApplication_whenMarkedReady_thenPersistsManualOutcomeAndThinEvent()
-      throws Exception {
+  void givenSubmittedApplication_whenMarkedReady_thenPersistsManualOutcomeAndThinEvent() {
     UUID applicationId = UUID.randomUUID();
     applicationId(post(validCreateApplicationRequest(applicationId, UUID.randomUUID()), headers()));
-    awaitProjection(applicationId);
+    projectionAwaiter.awaitApplication(applicationId);
     ManualOutcomeRequest request = new ManualOutcomeRequest(AutoGrantOutcome.MANUAL);
 
     ResponseEntity<Void> response =
@@ -619,7 +617,7 @@ class PostgresAxonIntegrationTest {
             Void.class);
 
     assertThat(response.getStatusCode()).isEqualTo(HttpStatus.NO_CONTENT);
-    ApplicationReadModel ready = awaitProjectionVersion(applicationId, 1L);
+    ApplicationReadModel ready = projectionAwaiter.awaitApplicationVersion(applicationId, 1L);
     assertThat(ready.getStatus()).isEqualTo("APPLICATION_SUBMITTED");
     assertThat(ready.getAutoGranted()).isEqualTo(AutoGrantedState.MANUAL);
     assertThat(
@@ -646,14 +644,14 @@ class PostgresAxonIntegrationTest {
   }
 
   @Test
-  void givenApplicationCertificate_whenGetCertificate_thenReturnsCurrentCertificate()
-      throws Exception {
+  void givenApplicationCertificate_whenGetCertificate_thenReturnsCurrentCertificate() {
     UUID applicationId = UUID.randomUUID();
     UUID applyProceedingId = UUID.randomUUID();
     applicationId(post(validCreateApplicationRequest(applicationId, applyProceedingId), headers()));
     markReadyForManualDecision(applicationId);
-    UUID caseworkerId = assignForManualDecision(applicationId);
-    UUID proceedingId = awaitProjection(applicationId).getProceedings().getFirst().getId();
+    assignForManualDecision(applicationId);
+    UUID proceedingId =
+        projectionAwaiter.awaitApplication(applicationId).getProceedings().getFirst().getId();
     Map<String, Object> certificate =
         Map.of(
             "certificateNumber", "TESTCERT001",
@@ -662,7 +660,6 @@ class PostgresAxonIntegrationTest {
     MakeDecisionRequest request =
         MakeDecisionRequest.builder()
             .applicationVersion(1L)
-            .caseworkerId(caseworkerId)
             .overallDecision(DecisionStatus.GRANTED)
             .certificate(certificate)
             .eventHistory(
@@ -686,7 +683,7 @@ class PostgresAxonIntegrationTest {
             new HttpEntity<>(request, headers()),
             Void.class);
     assertThat(decisionResponse.getStatusCode()).isEqualTo(HttpStatus.NO_CONTENT);
-    awaitProjectionVersion(applicationId, 2L);
+    projectionAwaiter.awaitApplicationVersion(applicationId, 2L);
 
     ResponseEntity<Map<String, Object>> certificateResponse =
         restTemplate.exchange(
@@ -703,7 +700,7 @@ class PostgresAxonIntegrationTest {
         post(
             validCreateApplicationRequest(applicationWithoutCertificate, UUID.randomUUID()),
             headers()));
-    awaitProjection(applicationWithoutCertificate);
+    projectionAwaiter.awaitApplication(applicationWithoutCertificate);
     ResponseEntity<String> missingCertificateResponse =
         restTemplate.exchange(
             "http://localhost:"
@@ -734,150 +731,8 @@ class PostgresAxonIntegrationTest {
         .contains("No application found with ID: " + missingApplicationId);
   }
 
-  void givenKnownCaseworkerAndApplication_whenAssigned_thenUpdatesOnlyRequestedApplication()
-      throws Exception {
-    UUID caseworkerId = UUID.randomUUID();
-    jdbcTemplate.update(
-        "INSERT INTO axon.caseworkers (id, username) VALUES (?, ?)",
-        caseworkerId,
-        "caseworker@example.com");
-    UUID firstApplicationId = UUID.randomUUID();
-    UUID secondApplicationId = UUID.randomUUID();
-    applicationId(
-        post(validCreateApplicationRequest(firstApplicationId, UUID.randomUUID()), headers()));
-    applicationId(
-        post(validCreateApplicationRequest(secondApplicationId, UUID.randomUUID()), headers()));
-    awaitProjection(firstApplicationId);
-    awaitProjection(secondApplicationId);
-
-    CaseworkerAssignRequest request =
-        CaseworkerAssignRequest.builder()
-            .caseworkerId(caseworkerId)
-            .applicationIds(List.of(firstApplicationId))
-            .eventHistory(
-                EventHistoryRequest.builder().eventDescription("Assigned for assessment").build())
-            .build();
-    ResponseEntity<Void> response =
-        restTemplate.postForEntity(
-            "http://localhost:" + port + "/api/v0/applications/assign",
-            new HttpEntity<>(request, headers()),
-            Void.class);
-
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-    assertThat(awaitProjectionVersion(firstApplicationId, 1L).getCaseworkerId())
-        .isEqualTo(caseworkerId);
-    assertThat(awaitProjection(secondApplicationId).getCaseworkerId()).isNull();
-    assertThat(awaitGet(firstApplicationId).getBody().getAssignedTo()).isEqualTo(caseworkerId);
-    assertThat(
-            jdbcTemplate.queryForObject(
-                "SELECT convert_from(payload, 'UTF8') FROM axon.domain_event_entry "
-                    + "WHERE aggregate_identifier = ? AND sequence_number = 1",
-                String.class,
-                firstApplicationId.toString()))
-        .contains("caseworkerId", caseworkerId.toString())
-        .doesNotContain("Assigned for assessment");
-
-    ResponseEntity<ApplicationHistoryResponse> historyResponse =
-        restTemplate.exchange(
-            "http://localhost:"
-                + port
-                + "/api/v0/applications/"
-                + firstApplicationId
-                + "/history-search?eventType=ASSIGN_APPLICATION_TO_CASEWORKER",
-            HttpMethod.GET,
-            new HttpEntity<>(headers()),
-            ApplicationHistoryResponse.class);
-    assertThat(historyResponse.getBody().getEvents())
-        .singleElement()
-        .satisfies(
-            event -> {
-              assertThat(event.getCaseworkerId()).isEqualTo(caseworkerId);
-              assertThat(event.getEventDescription()).isEqualTo("Assigned for assessment");
-            });
-
-    CaseworkerUnassignRequest unassignRequest =
-        CaseworkerUnassignRequest.builder()
-            .eventHistory(
-                EventHistoryRequest.builder().eventDescription("Returned to queue").build())
-            .build();
-    ResponseEntity<Void> unassignResponse =
-        restTemplate.postForEntity(
-            "http://localhost:" + port + "/api/v0/applications/" + firstApplicationId + "/unassign",
-            new HttpEntity<>(unassignRequest, headers()),
-            Void.class);
-    assertThat(unassignResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
-    assertThat(awaitProjectionVersion(firstApplicationId, 2L).getCaseworkerId()).isNull();
-    assertThat(awaitGet(firstApplicationId).getBody().getAssignedTo()).isNull();
-    assertThat(
-            jdbcTemplate.queryForObject(
-                "SELECT convert_from(payload, 'UTF8') FROM axon.domain_event_entry "
-                    + "WHERE aggregate_identifier = ? AND sequence_number = 2",
-                String.class,
-                firstApplicationId.toString()))
-        .doesNotContain("Returned to queue");
-
-    ResponseEntity<ApplicationHistoryResponse> unassignHistoryResponse =
-        restTemplate.exchange(
-            "http://localhost:"
-                + port
-                + "/api/v0/applications/"
-                + firstApplicationId
-                + "/history-search?eventType=UNASSIGN_APPLICATION_TO_CASEWORKER",
-            HttpMethod.GET,
-            new HttpEntity<>(headers()),
-            ApplicationHistoryResponse.class);
-    assertThat(unassignHistoryResponse.getBody().getEvents())
-        .singleElement()
-        .satisfies(
-            event -> {
-              assertThat(event.getCaseworkerId()).isNull();
-              assertThat(event.getEventDescription()).isEqualTo("Returned to queue");
-            });
-
-    ResponseEntity<Void> repeatedUnassignResponse =
-        restTemplate.postForEntity(
-            "http://localhost:" + port + "/api/v0/applications/" + firstApplicationId + "/unassign",
-            new HttpEntity<>(unassignRequest, headers()),
-            Void.class);
-    assertThat(repeatedUnassignResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
-    assertThat(awaitProjection(firstApplicationId).getApplicationVersion()).isEqualTo(2L);
-
-    CaseworkerAssignRequest multipleApplicationsRequest =
-        CaseworkerAssignRequest.builder()
-            .caseworkerId(caseworkerId)
-            .applicationIds(List.of(firstApplicationId, secondApplicationId))
-            .build();
-    ResponseEntity<Void> listResponse =
-        restTemplate.postForEntity(
-            "http://localhost:" + port + "/api/v0/applications/assign",
-            new HttpEntity<>(multipleApplicationsRequest, headers()),
-            Void.class);
-    assertThat(listResponse.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
-
-    CaseworkerAssignRequest missingApplicationRequest =
-        CaseworkerAssignRequest.builder()
-            .caseworkerId(caseworkerId)
-            .applicationIds(List.of(UUID.randomUUID()))
-            .build();
-    ResponseEntity<Void> missingResponse =
-        restTemplate.postForEntity(
-            "http://localhost:" + port + "/api/v0/applications/assign",
-            new HttpEntity<>(missingApplicationRequest, headers()),
-            Void.class);
-    assertThat(missingResponse.getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
-
-    ResponseEntity<Void> missingUnassignResponse =
-        restTemplate.postForEntity(
-            "http://localhost:" + port + "/api/v0/applications/" + UUID.randomUUID() + "/unassign",
-            new HttpEntity<>(unassignRequest, headers()),
-            Void.class);
-    assertThat(missingUnassignResponse.getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
-    assertThat(awaitProjection(secondApplicationId).getApplicationVersion()).isZero();
-  }
-
   @Test
-  void givenCreatedApplication_whenGetApplication_thenReturnsCurrentStateProjection()
-      throws Exception {
+  void givenCreatedApplication_whenGetApplication_thenReturnsCurrentStateProjection() {
     UUID applicationId = UUID.randomUUID();
     UUID applyProceedingId = UUID.randomUUID();
     final UUID involvedChildId = UUID.randomUUID();
@@ -914,7 +769,7 @@ class PostgresAxonIntegrationTest {
     request.setApplicationContent(content);
 
     UUID createdApplicationId = applicationId(post(request, headers()));
-    ResponseEntity<ApplicationResponse> response = awaitGet(createdApplicationId);
+    ResponseEntity<ApplicationResponse> response = awaitGetApplication(createdApplicationId);
 
     assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
     ApplicationResponse actual = response.getBody();
@@ -987,8 +842,7 @@ class PostgresAxonIntegrationTest {
   }
 
   @Test
-  void givenIdenticalRetry_whenPostApplicationAgain_thenReturnsCreatedIdempotently()
-      throws Exception {
+  void givenIdenticalRetry_whenPostApplicationAgain_thenReturnsCreatedIdempotently() {
     UUID applicationId = UUID.randomUUID();
     HttpEntity<ApplicationCreateRequest> request =
         new HttpEntity<>(
@@ -997,7 +851,7 @@ class PostgresAxonIntegrationTest {
     ResponseEntity<Void> firstResponse =
         restTemplate.postForEntity(
             "http://localhost:" + port + "/api/v0/applications", request, Void.class);
-    awaitProjection(applicationId(firstResponse));
+    projectionAwaiter.awaitApplication(applicationId(firstResponse));
 
     ResponseEntity<Void> retryResponse =
         restTemplate.postForEntity(
@@ -1021,13 +875,13 @@ class PostgresAxonIntegrationTest {
   }
 
   @Test
-  void givenChangedPayload_whenPostApplicationAgain_thenReturnsConflict() throws Exception {
+  void givenChangedPayload_whenPostApplicationAgain_thenReturnsConflict() {
     UUID applicationId = UUID.randomUUID();
     UUID applyProceedingId = UUID.randomUUID();
 
     ResponseEntity<Void> firstResponse =
         post(validCreateApplicationRequest(applicationId, applyProceedingId), headers());
-    awaitProjection(applicationId(firstResponse));
+    projectionAwaiter.awaitApplication(applicationId(firstResponse));
 
     ResponseEntity<String> conflictResponse =
         post(
@@ -1038,87 +892,6 @@ class PostgresAxonIntegrationTest {
     assertThat(firstResponse.getStatusCode()).isEqualTo(HttpStatus.CREATED);
     assertThat(conflictResponse.getStatusCode()).isEqualTo(HttpStatus.CONFLICT);
     assertThat(awaitHistory(applicationId, 1)).hasSize(1);
-  }
-
-  @Test
-  @Disabled("Linked applications removed from schema; orchestration retained for future endpoint")
-  void givenExistingLeadApplication_whenPostLinkedApplication_thenProjectsCurrentStateAndHistory()
-      throws Exception {
-    UUID leadApplicationId = UUID.randomUUID();
-    ResponseEntity<Void> leadResponse =
-        post(validCreateApplicationRequest(leadApplicationId, UUID.randomUUID()), headers());
-    UUID createdLeadApplicationId = applicationId(leadResponse);
-    awaitProjection(createdLeadApplicationId);
-
-    ResponseEntity<Void> linkedResponse =
-        post(
-            validLinkedCreateApplicationRequest(
-                UUID.randomUUID(), UUID.randomUUID(), createdLeadApplicationId),
-            headers());
-    UUID linkedApplicationId = applicationId(linkedResponse);
-
-    assertThat(
-            awaitHistoryTypes(
-                linkedApplicationId, "APPLICATION_CREATED", "APPLICATION_GROUP_JOINED"))
-        .extracting(ApplicationHistoryReadModel::getEventType)
-        .containsExactlyInAnyOrder("APPLICATION_CREATED", "APPLICATION_GROUP_JOINED");
-    assertThat(
-            awaitHistoryTypes(
-                createdLeadApplicationId, "APPLICATION_CREATED", "APPLICATION_GROUP_CREATED"))
-        .extracting(ApplicationHistoryReadModel::getEventType)
-        .containsExactlyInAnyOrder("APPLICATION_CREATED", "APPLICATION_GROUP_CREATED");
-    ApplicationReadModel projected =
-        applicationReadRepository
-            .findById(linkedApplicationId)
-            .orElseThrow(() -> new AssertionError("Application not found: " + linkedApplicationId));
-    assertThat(projected.getLeadApplicationId()).isEqualTo(createdLeadApplicationId);
-  }
-
-  @Test
-  @Disabled("Linked applications removed from schema; orchestration retained for future endpoint")
-  void givenMissingLeadApplication_whenPostApplication_thenReturnsNotFound() {
-    UUID missingLeadApplicationId = UUID.randomUUID();
-    UUID rejectedApplicationId = UUID.randomUUID();
-
-    ResponseEntity<String> response =
-        post(
-            validLinkedCreateApplicationRequest(
-                rejectedApplicationId, UUID.randomUUID(), missingLeadApplicationId),
-            headers(),
-            String.class);
-
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
-    assertThat(response.getBody()).contains(missingLeadApplicationId.toString());
-    assertRejectedApplicationWasRolledBack(rejectedApplicationId);
-    assertThat(groupReadRepository.findByLeadApplicationId(missingLeadApplicationId)).isEmpty();
-  }
-
-  @Test
-  @Disabled("Linked applications removed from schema; orchestration retained for future endpoint")
-  void givenMissingAssociatedApplication_whenPostApplication_thenReturnsNotFound()
-      throws Exception {
-    UUID leadApplicationId = UUID.randomUUID();
-    UUID createdLeadApplicationId =
-        applicationId(
-            post(validCreateApplicationRequest(leadApplicationId, UUID.randomUUID()), headers()));
-    awaitProjection(createdLeadApplicationId);
-
-    UUID missingAssociatedApplicationId = UUID.randomUUID();
-    UUID rejectedApplicationId = UUID.randomUUID();
-    ResponseEntity<String> response =
-        post(
-            validLinkedCreateApplicationRequest(
-                rejectedApplicationId,
-                UUID.randomUUID(),
-                createdLeadApplicationId,
-                missingAssociatedApplicationId),
-            headers(),
-            String.class);
-
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
-    assertThat(response.getBody()).contains(missingAssociatedApplicationId.toString());
-    assertRejectedApplicationWasRolledBack(rejectedApplicationId);
-    assertThat(groupReadRepository.findByLeadApplicationId(createdLeadApplicationId)).isEmpty();
   }
 
   @Test
@@ -1136,7 +909,7 @@ class PostgresAxonIntegrationTest {
   }
 
   @Test
-  void givenSchemaInvalidRequest_whenPostApplication_thenReturnsBadRequest() throws Exception {
+  void givenSchemaInvalidRequest_whenPostApplication_thenReturnsBadRequest() {
     ApplicationCreateRequest request =
         validCreateApplicationRequest(UUID.randomUUID(), UUID.randomUUID());
     Map<String, Object> invalidContent = new HashMap<>(request.getApplicationContent());
@@ -1258,7 +1031,7 @@ class PostgresAxonIntegrationTest {
     }
 
     // The event store must contain exactly one ApplicationCreatedEvent.
-    awaitProjection(applicationId);
+    projectionAwaiter.awaitApplication(applicationId);
     List<Map<String, Object>> events =
         jdbcTemplate.queryForList(
             "SELECT payload_type, sequence_number FROM axon.domain_event_entry "
@@ -1279,12 +1052,12 @@ class PostgresAxonIntegrationTest {
     UUID applicationId = UUID.randomUUID();
     applicationId(post(validCreateApplicationRequest(applicationId, UUID.randomUUID()), headers()));
     markReadyForManualDecision(applicationId);
-    UUID caseworkerId = assignForManualDecision(applicationId);
-    UUID proceedingId = awaitProjection(applicationId).getProceedings().getFirst().getId();
+    assignForManualDecision(applicationId);
+    UUID proceedingId =
+        projectionAwaiter.awaitApplication(applicationId).getProceedings().getFirst().getId();
     MakeDecisionRequest request =
         MakeDecisionRequest.builder()
             .applicationVersion(1L)
-            .caseworkerId(caseworkerId)
             .overallDecision(DecisionStatus.REFUSED)
             .eventHistory(EventHistoryRequest.builder().eventDescription("Concurrent").build())
             .proceedings(
@@ -1316,7 +1089,8 @@ class PostgresAxonIntegrationTest {
       executor.shutdown();
     }
 
-    assertThat(awaitProjectionVersion(applicationId, 2L).getApplicationVersion()).isEqualTo(2L);
+    assertThat(projectionAwaiter.awaitApplicationVersion(applicationId, 2L).getApplicationVersion())
+        .isEqualTo(2L);
     assertThat(
             jdbcTemplate.queryForObject(
                 "SELECT COUNT(*) FROM axon.application_data WHERE application_id = ?",
@@ -1336,7 +1110,7 @@ class PostgresAxonIntegrationTest {
       throws Exception {
     UUID applicationId = UUID.randomUUID();
     applicationId(post(validCreateApplicationRequest(applicationId, UUID.randomUUID()), headers()));
-    awaitProjection(applicationId);
+    projectionAwaiter.awaitApplication(applicationId);
     ManualOutcomeRequest request = new ManualOutcomeRequest(AutoGrantOutcome.MANUAL);
     HttpEntity<ManualOutcomeRequest> entity = new HttpEntity<>(request, headers());
     String url =
@@ -1360,7 +1134,7 @@ class PostgresAxonIntegrationTest {
       executor.shutdown();
     }
 
-    assertThat(awaitProjectionVersion(applicationId, 1L).getAutoGranted())
+    assertThat(projectionAwaiter.awaitApplicationVersion(applicationId, 1L).getAutoGranted())
         .isEqualTo(AutoGrantedState.MANUAL);
     assertThat(
             jdbcTemplate.queryForObject(
@@ -1376,7 +1150,7 @@ class PostgresAxonIntegrationTest {
         .isEqualTo(2);
   }
 
-  private void markReadyForManualDecision(UUID applicationId) throws Exception {
+  private void markReadyForManualDecision(UUID applicationId) {
     ResponseEntity<Void> response =
         restTemplate.exchange(
             "http://localhost:"
@@ -1389,24 +1163,21 @@ class PostgresAxonIntegrationTest {
             Void.class);
 
     assertThat(response.getStatusCode()).isEqualTo(HttpStatus.NO_CONTENT);
-    awaitProjectionVersion(applicationId, 1L);
+    projectionAwaiter.awaitApplicationVersion(applicationId, 1L);
   }
 
   private UUID assignForManualDecision(UUID applicationId) {
-    UUID caseworkerId = UUID.randomUUID();
-    jdbcTemplate.update(
-        "INSERT INTO axon.caseworkers (id, username) VALUES (?, ?)",
-        caseworkerId,
-        "decision-" + caseworkerId + "@example.com");
+    UUID caseworkerId = TestJwtDecoderConfig.CASEWORKER_ID;
     ResponseEntity<Void> response =
         restTemplate.exchange(
             "http://localhost:" + port + "/api/v0/work-list/" + applicationId + "/assign",
             HttpMethod.POST,
-            new HttpEntity<>(new WorkListAssignRequest(caseworkerId, 0L), headers()),
+            new HttpEntity<>(new WorkListAssignRequest(0L), headers()),
             Void.class);
 
     assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-    assertThat(awaitProjectionVersion(applicationId, 1L).getCaseworkerId()).isEqualTo(caseworkerId);
+    assertThat(projectionAwaiter.awaitApplicationVersion(applicationId, 1L).getCaseworkerId())
+        .isEqualTo(caseworkerId);
     return caseworkerId;
   }
 
@@ -1425,50 +1196,9 @@ class PostgresAxonIntegrationTest {
   }
 
   @Test
-  void givenSeededCaseworkers_whenGetCaseworkers_thenReturnsAllCaseworkers() {
-    UUID firstId = UUID.randomUUID();
-    UUID secondId = UUID.randomUUID();
-    jdbcTemplate.update(
-        "INSERT INTO axon.caseworkers (id, username) VALUES (?, ?)", firstId, "alice@example.com");
-    jdbcTemplate.update(
-        "INSERT INTO axon.caseworkers (id, username) VALUES (?, ?)", secondId, "bob@example.com");
-
-    HttpHeaders headers = new HttpHeaders();
-    headers.set("X-Service-Name", "CIVIL_APPLY");
-    headers.setBearerAuth(TestJwtDecoderConfig.BEARER_TOKEN);
-    ResponseEntity<List<Map<String, Object>>> response =
-        restTemplate.exchange(
-            "http://localhost:" + port + "/api/v0/caseworkers",
-            HttpMethod.GET,
-            new HttpEntity<>(headers),
-            new ParameterizedTypeReference<>() {});
-
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-    assertThat(response.getBody())
-        .extracting(item -> item.get("username"))
-        .contains("alice@example.com", "bob@example.com");
-  }
-
-  @Test
-  void givenMissingServiceNameHeader_whenGetCaseworkers_thenReturnsBadRequest() {
-    HttpHeaders headers = new HttpHeaders();
-    headers.setBearerAuth(TestJwtDecoderConfig.BEARER_TOKEN);
-    // Intentionally omit X-Service-Name to test validation
-    ResponseEntity<String> response =
-        restTemplate.exchange(
-            "http://localhost:" + port + "/api/v0/caseworkers",
-            HttpMethod.GET,
-            new HttpEntity<>(headers),
-            String.class);
-
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
-  }
-
-  @Test
   void givenNoToken_whenCallingSecuredEndpoints_thenReturnsUnauthorized() {
     UUID applicationId = UUID.randomUUID();
 
-    assertUnauthorized(HttpMethod.GET, "/api/v0/caseworkers", null);
     assertUnauthorized(HttpMethod.GET, "/api/v0/applications", null);
     assertUnauthorized(HttpMethod.GET, "/api/v0/individuals", null);
     assertUnauthorized(HttpMethod.GET, "/api/v0/applications/" + applicationId, null);
@@ -1493,7 +1223,6 @@ class PostgresAxonIntegrationTest {
         HttpMethod.POST,
         "/api/v0/applications/" + applicationId + "/notes",
         new CreateNoteRequest("note"));
-    assertUnauthorized(HttpMethod.POST, "/api/v0/applications/assign", assignRequestBody());
     assertUnauthorized(
         HttpMethod.POST,
         "/api/v0/applications/" + applicationId + "/unassign",
@@ -1503,8 +1232,6 @@ class PostgresAxonIntegrationTest {
   @Test
   void givenUnknownToken_whenCallingSecuredEndpoints_thenReturnsForbidden() {
     UUID applicationId = UUID.randomUUID();
-
-    assertForbidden(HttpMethod.GET, "/api/v0/caseworkers", null);
     assertForbidden(HttpMethod.GET, "/api/v0/applications", null);
     assertForbidden(HttpMethod.GET, "/api/v0/individuals", null);
     assertForbidden(HttpMethod.GET, "/api/v0/applications/" + applicationId, null);
@@ -1528,7 +1255,6 @@ class PostgresAxonIntegrationTest {
         HttpMethod.POST,
         "/api/v0/applications/" + applicationId + "/notes",
         new CreateNoteRequest("note"));
-    assertForbidden(HttpMethod.POST, "/api/v0/applications/assign", assignRequestBody());
     assertForbidden(
         HttpMethod.POST,
         "/api/v0/applications/" + applicationId + "/unassign",
@@ -1544,7 +1270,6 @@ class PostgresAxonIntegrationTest {
   private MakeDecisionRequest decisionBody() {
     return MakeDecisionRequest.builder()
         .applicationVersion(0L)
-        .caseworkerId(UUID.randomUUID())
         .overallDecision(DecisionStatus.REFUSED)
         .autoGranted(false)
         .eventHistory(EventHistoryRequest.builder().eventDescription("decision").build())
@@ -1564,13 +1289,6 @@ class PostgresAxonIntegrationTest {
 
   private ManualOutcomeRequest autoGrantOutcomeBody() {
     return new ManualOutcomeRequest(AutoGrantOutcome.MANUAL);
-  }
-
-  private CaseworkerAssignRequest assignRequestBody() {
-    return new CaseworkerAssignRequest()
-        .caseworkerId(UUID.randomUUID())
-        .applicationIds(List.of(UUID.randomUUID()))
-        .eventHistory(EventHistoryRequest.builder().eventDescription("assign").build());
   }
 
   private CaseworkerUnassignRequest unassignRequestBody() {
@@ -1633,11 +1351,10 @@ class PostgresAxonIntegrationTest {
   }
 
   @Test
-  void givenExistingApplication_whenCreateNote_thenReturns204AndPersistsNoteInApplicationData()
-      throws Exception {
+  void givenExistingApplication_whenCreateNote_thenReturns204AndPersistsNoteInApplicationData() {
     UUID applicationId = UUID.randomUUID();
     applicationId(post(validCreateApplicationRequest(applicationId, UUID.randomUUID()), headers()));
-    awaitProjection(applicationId);
+    projectionAwaiter.awaitApplication(applicationId);
 
     ResponseEntity<Void> response =
         restTemplate.exchange(
@@ -1649,7 +1366,7 @@ class PostgresAxonIntegrationTest {
     assertThat(response.getStatusCode()).isEqualTo(HttpStatus.NO_CONTENT);
 
     // applicationDataVersion advances to 1; applicationVersion stays at 0
-    ApplicationReadModel model = awaitProjectionVersion(applicationId, 1L);
+    ApplicationReadModel model = projectionAwaiter.awaitApplicationVersion(applicationId, 1L);
     assertThat(model.getApplicationVersion()).isEqualTo(0L);
 
     // Note text persisted in application_data JSONB at version 1
@@ -1687,17 +1404,17 @@ class PostgresAxonIntegrationTest {
   }
 
   @Test
-  void givenApplicationWithNote_whenGetNotes_thenReturnsNoteInResponse() throws Exception {
+  void givenApplicationWithNote_whenGetNotes_thenReturnsNoteInResponse() {
     UUID applicationId = UUID.randomUUID();
     applicationId(post(validCreateApplicationRequest(applicationId, UUID.randomUUID()), headers()));
-    awaitProjection(applicationId);
+    projectionAwaiter.awaitApplication(applicationId);
 
     restTemplate.exchange(
         "http://localhost:" + port + "/api/v0/applications/" + applicationId + "/notes",
         HttpMethod.POST,
         new HttpEntity<>(new CreateNoteRequest("Hello from GET notes test"), headers()),
         Void.class);
-    awaitProjectionVersion(applicationId, 1L);
+    projectionAwaiter.awaitApplicationVersion(applicationId, 1L);
 
     ResponseEntity<String> response =
         restTemplate.exchange(
@@ -1726,7 +1443,7 @@ class PostgresAxonIntegrationTest {
   void givenApplicationWithPriorAuthority_whenGetHistory_thenReturnsPriorAuthoritiesSection() {
     UUID applicationId = UUID.randomUUID();
     applicationId(post(validCreateApplicationRequest(applicationId, UUID.randomUUID()), headers()));
-    awaitProjection(applicationId);
+    projectionAwaiter.awaitApplication(applicationId);
 
     restTemplate.exchange(
         "http://localhost:"
@@ -1740,7 +1457,7 @@ class PostgresAxonIntegrationTest {
                 AutoGrantOutcome.AUTOGRANTED, Map.of("certificateNumber", "PA-CERT-001")),
             headers()),
         Void.class);
-    awaitProjectionVersion(applicationId, 1L);
+    projectionAwaiter.awaitApplicationVersion(applicationId, 1L);
 
     ResponseEntity<String> paResponse =
         restTemplate.postForEntity(
@@ -1788,8 +1505,440 @@ class PostgresAxonIntegrationTest {
     assertThat(group.getPriorAuthorityId()).isEqualTo(priorAuthorityId);
     assertThat(group.getPriorAuthorityType()).isEqualTo(PriorAuthorityType.EXPERT);
     assertThat(group.getEvents()).hasSize(1);
-    assertThat(group.getEvents().get(0).getEventType()).isEqualTo("PRIOR_AUTHORITY_SUBMITTED");
+    assertThat(group.getEvents().getFirst().getEventType()).isEqualTo("PRIOR_AUTHORITY_SUBMITTED");
+    assertThat(group.getEvents().getFirst().getCaseworkerId())
+        .isEqualTo(TestJwtDecoderConfig.CASEWORKER_ID);
     assertThat(historyResponse.getBody().getEvents()).isNotEmpty();
+  }
+
+  @Test
+  void
+      givenSubmittedPriorAuthorityAssignedToCaseworker_whenGetHistory_thenIncludesAssignmentEvent() {
+    UUID applicationId = UUID.randomUUID();
+    applicationId(post(validCreateApplicationRequest(applicationId, UUID.randomUUID()), headers()));
+    projectionAwaiter.awaitApplication(applicationId);
+
+    restTemplate.exchange(
+        "http://localhost:"
+            + port
+            + "/api/v0/applications/"
+            + applicationId
+            + "/auto-grant-outcome",
+        HttpMethod.PATCH,
+        new HttpEntity<>(
+            new AutoGrantedOutcomeRequest(
+                AutoGrantOutcome.AUTOGRANTED, Map.of("certificateNumber", "PA-CERT-002")),
+            headers()),
+        Void.class);
+    projectionAwaiter.awaitApplicationVersion(applicationId, 1L);
+
+    ResponseEntity<String> paResponse =
+        restTemplate.postForEntity(
+            "http://localhost:" + port + "/api/v0/prior-authorities",
+            new HttpEntity<>(fixedRateExpertDraftRequest(applicationId), headers()),
+            String.class);
+    assertThat(paResponse.getStatusCode()).isIn(HttpStatus.CREATED, HttpStatus.ACCEPTED);
+    UUID priorAuthorityId =
+        UUID.fromString(
+            objectMapper.readTree(paResponse.getBody()).get("priorAuthorityId").asText());
+
+    ResponseEntity<String> submitResponse =
+        restTemplate.postForEntity(
+            "http://localhost:"
+                + port
+                + "/api/v0/prior-authorities/"
+                + priorAuthorityId
+                + "/submit",
+            new HttpEntity<>(null, headers()),
+            String.class);
+    assertThat(submitResponse.getStatusCode()).isIn(HttpStatus.OK, HttpStatus.ACCEPTED);
+
+    ResponseEntity<Void> assignResponse =
+        restTemplate.exchange(
+            "http://localhost:" + port + "/api/v0/work-list/" + priorAuthorityId + "/assign",
+            HttpMethod.POST,
+            new HttpEntity<>(new WorkListAssignRequest(0L), headers()),
+            Void.class);
+    assertThat(assignResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    await()
+        .atMost(10, TimeUnit.SECONDS)
+        .pollInterval(50, TimeUnit.MILLISECONDS)
+        .until(
+            () ->
+                priorAuthorityHistoryReadRepository.findAllByApplicationIdOrderByOccurredAtAsc(
+                    applicationId),
+            rows -> rows.size() == 2);
+
+    ResponseEntity<ApplicationHistoryResponse> historyResponse =
+        restTemplate.exchange(
+            "http://localhost:"
+                + port
+                + "/api/v0/applications/"
+                + applicationId
+                + "/history-search",
+            HttpMethod.GET,
+            new HttpEntity<>(headers()),
+            ApplicationHistoryResponse.class);
+    assertThat(historyResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    assertThat(historyResponse.getBody().getPriorAuthorities()).hasSize(1);
+    PriorAuthorityHistoryGroup group = historyResponse.getBody().getPriorAuthorities().get(0);
+    assertThat(group.getPriorAuthorityId()).isEqualTo(priorAuthorityId);
+    assertThat(group.getPriorAuthorityType()).isEqualTo(PriorAuthorityType.EXPERT);
+    assertThat(group.getEvents()).hasSize(2);
+    assertThat(group.getEvents())
+        .extracting(event -> event.getEventType())
+        .containsExactlyInAnyOrder("PRIOR_AUTHORITY_SUBMITTED", "ASSIGN_APPLICATION_TO_CASEWORKER");
+    assertThat(group.getEvents())
+        .extracting(event -> event.getCaseworkerId())
+        .allSatisfy(
+            caseworkerId -> assertThat(caseworkerId).isEqualTo(TestJwtDecoderConfig.CASEWORKER_ID));
+  }
+
+  @Test
+  void
+      givenAssignedPriorAuthorityUnassignedFromCaseworker_whenGetHistory_thenIncludesUnassignmentEvent() {
+    UUID applicationId = UUID.randomUUID();
+    applicationId(post(validCreateApplicationRequest(applicationId, UUID.randomUUID()), headers()));
+    projectionAwaiter.awaitApplication(applicationId);
+
+    restTemplate.exchange(
+        "http://localhost:"
+            + port
+            + "/api/v0/applications/"
+            + applicationId
+            + "/auto-grant-outcome",
+        HttpMethod.PATCH,
+        new HttpEntity<>(
+            new AutoGrantedOutcomeRequest(
+                AutoGrantOutcome.AUTOGRANTED, Map.of("certificateNumber", "PA-CERT-003")),
+            headers()),
+        Void.class);
+    projectionAwaiter.awaitApplicationVersion(applicationId, 1L);
+
+    ResponseEntity<String> paResponse =
+        restTemplate.postForEntity(
+            "http://localhost:" + port + "/api/v0/prior-authorities",
+            new HttpEntity<>(fixedRateExpertDraftRequest(applicationId), headers()),
+            String.class);
+    assertThat(paResponse.getStatusCode()).isIn(HttpStatus.CREATED, HttpStatus.ACCEPTED);
+    UUID priorAuthorityId =
+        UUID.fromString(
+            objectMapper.readTree(paResponse.getBody()).get("priorAuthorityId").asText());
+
+    ResponseEntity<String> submitResponse =
+        restTemplate.postForEntity(
+            "http://localhost:"
+                + port
+                + "/api/v0/prior-authorities/"
+                + priorAuthorityId
+                + "/submit",
+            new HttpEntity<>(null, headers()),
+            String.class);
+    assertThat(submitResponse.getStatusCode()).isIn(HttpStatus.OK, HttpStatus.ACCEPTED);
+
+    ResponseEntity<Void> assignResponse =
+        restTemplate.exchange(
+            "http://localhost:" + port + "/api/v0/work-list/" + priorAuthorityId + "/assign",
+            HttpMethod.POST,
+            new HttpEntity<>(new WorkListAssignRequest(0L), headers()),
+            Void.class);
+    assertThat(assignResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    ResponseEntity<Void> unassignResponse =
+        restTemplate.exchange(
+            "http://localhost:" + port + "/api/v0/work-list/" + priorAuthorityId + "/unassign",
+            HttpMethod.POST,
+            new HttpEntity<>(new WorkListUnassignRequest(1L), headers()),
+            Void.class);
+    assertThat(unassignResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    await()
+        .atMost(10, TimeUnit.SECONDS)
+        .pollInterval(50, TimeUnit.MILLISECONDS)
+        .until(
+            () ->
+                priorAuthorityHistoryReadRepository.findAllByApplicationIdOrderByOccurredAtAsc(
+                    applicationId),
+            rows -> rows.size() == 3);
+
+    ResponseEntity<ApplicationHistoryResponse> historyResponse =
+        restTemplate.exchange(
+            "http://localhost:"
+                + port
+                + "/api/v0/applications/"
+                + applicationId
+                + "/history-search",
+            HttpMethod.GET,
+            new HttpEntity<>(headers()),
+            ApplicationHistoryResponse.class);
+    assertThat(historyResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    assertThat(historyResponse.getBody().getPriorAuthorities()).hasSize(1);
+    PriorAuthorityHistoryGroup group = historyResponse.getBody().getPriorAuthorities().getFirst();
+    assertThat(group.getPriorAuthorityId()).isEqualTo(priorAuthorityId);
+    assertThat(group.getPriorAuthorityType()).isEqualTo(PriorAuthorityType.EXPERT);
+    assertThat(group.getEvents()).hasSize(3);
+    assertThat(group.getEvents())
+        .extracting(event -> event.getEventType())
+        .containsExactlyInAnyOrder(
+            "PRIOR_AUTHORITY_SUBMITTED",
+            "UNASSIGN_APPLICATION_TO_CASEWORKER",
+            "ASSIGN_APPLICATION_TO_CASEWORKER");
+    assertThat(group.getEvents())
+        .filteredOn(event -> event.getEventType().equals("PRIOR_AUTHORITY_SUBMITTED"))
+        .singleElement()
+        .satisfies(
+            event ->
+                assertThat(event.getCaseworkerId()).isEqualTo(TestJwtDecoderConfig.CASEWORKER_ID));
+    assertThat(group.getEvents())
+        .filteredOn(event -> event.getEventType().equals("ASSIGN_APPLICATION_TO_CASEWORKER"))
+        .singleElement()
+        .satisfies(
+            event ->
+                assertThat(event.getCaseworkerId()).isEqualTo(TestJwtDecoderConfig.CASEWORKER_ID));
+    assertThat(group.getEvents())
+        .filteredOn(event -> event.getEventType().equals("UNASSIGN_APPLICATION_TO_CASEWORKER"))
+        .singleElement()
+        .satisfies(
+            event ->
+                assertThat(event.getCaseworkerId()).isEqualTo(TestJwtDecoderConfig.CASEWORKER_ID));
+  }
+
+  @Test
+  void
+      givenSubmittedPriorAuthorityReassignedToDifferentCaseworker_whenGetHistory_thenIncludesAllAssignmentEvents() {
+    UUID applicationId = UUID.randomUUID();
+    applicationId(post(validCreateApplicationRequest(applicationId, UUID.randomUUID()), headers()));
+    projectionAwaiter.awaitApplication(applicationId);
+
+    restTemplate.exchange(
+        "http://localhost:"
+            + port
+            + "/api/v0/applications/"
+            + applicationId
+            + "/auto-grant-outcome",
+        HttpMethod.PATCH,
+        new HttpEntity<>(
+            new AutoGrantedOutcomeRequest(
+                AutoGrantOutcome.AUTOGRANTED, Map.of("certificateNumber", "PA-CERT-004")),
+            headers()),
+        Void.class);
+    projectionAwaiter.awaitApplicationVersion(applicationId, 1L);
+
+    ResponseEntity<String> paResponse =
+        restTemplate.postForEntity(
+            "http://localhost:" + port + "/api/v0/prior-authorities",
+            new HttpEntity<>(fixedRateExpertDraftRequest(applicationId), headers()),
+            String.class);
+    assertThat(paResponse.getStatusCode()).isIn(HttpStatus.CREATED, HttpStatus.ACCEPTED);
+    UUID priorAuthorityId =
+        UUID.fromString(
+            objectMapper.readTree(paResponse.getBody()).get("priorAuthorityId").asText());
+
+    ResponseEntity<String> submitResponse =
+        restTemplate.postForEntity(
+            "http://localhost:"
+                + port
+                + "/api/v0/prior-authorities/"
+                + priorAuthorityId
+                + "/submit",
+            new HttpEntity<>(null, headers()),
+            String.class);
+    assertThat(submitResponse.getStatusCode()).isIn(HttpStatus.OK, HttpStatus.ACCEPTED);
+
+    ResponseEntity<Void> firstAssign =
+        restTemplate.exchange(
+            "http://localhost:" + port + "/api/v0/work-list/" + priorAuthorityId + "/assign",
+            HttpMethod.POST,
+            new HttpEntity<>(
+                new WorkListAssignRequest(0L), headers(TestJwtDecoderConfig.BEARER_TOKEN)),
+            Void.class);
+    assertThat(firstAssign.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    ResponseEntity<Void> unassign =
+        restTemplate.exchange(
+            "http://localhost:" + port + "/api/v0/work-list/" + priorAuthorityId + "/unassign",
+            HttpMethod.POST,
+            new HttpEntity<>(new WorkListUnassignRequest(1L), headers()),
+            Void.class);
+    assertThat(unassign.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    ResponseEntity<Void> secondAssign =
+        restTemplate.exchange(
+            "http://localhost:" + port + "/api/v0/work-list/" + priorAuthorityId + "/assign",
+            HttpMethod.POST,
+            new HttpEntity<>(
+                new WorkListAssignRequest(2L), headers(TestJwtDecoderConfig.OTHER_BEARER_TOKEN)),
+            Void.class);
+    assertThat(secondAssign.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    await()
+        .atMost(10, TimeUnit.SECONDS)
+        .pollInterval(50, TimeUnit.MILLISECONDS)
+        .until(
+            () ->
+                priorAuthorityHistoryReadRepository.findAllByApplicationIdOrderByOccurredAtAsc(
+                    applicationId),
+            rows -> rows.size() == 4);
+
+    ResponseEntity<ApplicationHistoryResponse> historyResponse =
+        restTemplate.exchange(
+            "http://localhost:"
+                + port
+                + "/api/v0/applications/"
+                + applicationId
+                + "/history-search",
+            HttpMethod.GET,
+            new HttpEntity<>(headers()),
+            ApplicationHistoryResponse.class);
+    assertThat(historyResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    assertThat(historyResponse.getBody().getPriorAuthorities()).hasSize(1);
+    PriorAuthorityHistoryGroup group = historyResponse.getBody().getPriorAuthorities().get(0);
+    assertThat(group.getPriorAuthorityId()).isEqualTo(priorAuthorityId);
+    assertThat(group.getPriorAuthorityType()).isEqualTo(PriorAuthorityType.EXPERT);
+    assertThat(group.getEvents()).hasSize(4);
+    assertThat(group.getEvents())
+        .extracting(event -> event.getEventType())
+        .containsExactlyInAnyOrder(
+            "PRIOR_AUTHORITY_SUBMITTED",
+            "UNASSIGN_APPLICATION_TO_CASEWORKER",
+            "ASSIGN_APPLICATION_TO_CASEWORKER",
+            "ASSIGN_APPLICATION_TO_CASEWORKER");
+    assertThat(group.getEvents())
+        .filteredOn(event -> event.getEventType().equals("PRIOR_AUTHORITY_SUBMITTED"))
+        .singleElement()
+        .satisfies(
+            event ->
+                assertThat(event.getCaseworkerId()).isEqualTo(TestJwtDecoderConfig.CASEWORKER_ID));
+    assertThat(group.getEvents())
+        .filteredOn(event -> event.getEventType().equals("UNASSIGN_APPLICATION_TO_CASEWORKER"))
+        .singleElement()
+        .satisfies(
+            event ->
+                assertThat(event.getCaseworkerId()).isEqualTo(TestJwtDecoderConfig.CASEWORKER_ID));
+
+    assertThat(group.getEvents())
+        .filteredOn(event -> event.getEventType().equals("ASSIGN_APPLICATION_TO_CASEWORKER"))
+        .hasSize(2)
+        .allSatisfy(event -> assertThat(event.getCaseworkerId()).isNotNull());
+  }
+
+  @Test
+  void
+      givenMultiplePriorAuthoritiesWithOneAssigned_whenGetHistory_thenAssignmentEventAttachedToCorrectGroup() {
+    UUID applicationId = UUID.randomUUID();
+    applicationId(post(validCreateApplicationRequest(applicationId, UUID.randomUUID()), headers()));
+    projectionAwaiter.awaitApplication(applicationId);
+
+    restTemplate.exchange(
+        "http://localhost:"
+            + port
+            + "/api/v0/applications/"
+            + applicationId
+            + "/auto-grant-outcome",
+        HttpMethod.PATCH,
+        new HttpEntity<>(
+            new AutoGrantedOutcomeRequest(
+                AutoGrantOutcome.AUTOGRANTED, Map.of("certificateNumber", "PA-CERT-005")),
+            headers()),
+        Void.class);
+    projectionAwaiter.awaitApplicationVersion(applicationId, 1L);
+
+    ResponseEntity<String> firstPaResponse =
+        restTemplate.postForEntity(
+            "http://localhost:" + port + "/api/v0/prior-authorities",
+            new HttpEntity<>(fixedRateExpertDraftRequest(applicationId), headers()),
+            String.class);
+    assertThat(firstPaResponse.getStatusCode()).isIn(HttpStatus.CREATED, HttpStatus.ACCEPTED);
+    UUID firstPriorAuthorityId =
+        UUID.fromString(
+            objectMapper.readTree(firstPaResponse.getBody()).get("priorAuthorityId").asText());
+    restTemplate.postForEntity(
+        "http://localhost:"
+            + port
+            + "/api/v0/prior-authorities/"
+            + firstPriorAuthorityId
+            + "/submit",
+        new HttpEntity<>(null, headers()),
+        String.class);
+
+    ResponseEntity<String> secondPaResponse =
+        restTemplate.postForEntity(
+            "http://localhost:" + port + "/api/v0/prior-authorities",
+            new HttpEntity<>(fixedRateExpertDraftRequest(applicationId), headers()),
+            String.class);
+    assertThat(secondPaResponse.getStatusCode()).isIn(HttpStatus.CREATED, HttpStatus.ACCEPTED);
+    UUID secondPriorAuthorityId =
+        UUID.fromString(
+            objectMapper.readTree(secondPaResponse.getBody()).get("priorAuthorityId").asText());
+    restTemplate.postForEntity(
+        "http://localhost:"
+            + port
+            + "/api/v0/prior-authorities/"
+            + secondPriorAuthorityId
+            + "/submit",
+        new HttpEntity<>(null, headers()),
+        String.class);
+
+    ResponseEntity<Void> assignResponse =
+        restTemplate.exchange(
+            "http://localhost:" + port + "/api/v0/work-list/" + secondPriorAuthorityId + "/assign",
+            HttpMethod.POST,
+            new HttpEntity<>(new WorkListAssignRequest(0L), headers()),
+            Void.class);
+    assertThat(assignResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    await()
+        .atMost(10, TimeUnit.SECONDS)
+        .pollInterval(50, TimeUnit.MILLISECONDS)
+        .until(
+            () ->
+                priorAuthorityHistoryReadRepository.findAllByApplicationIdOrderByOccurredAtAsc(
+                    applicationId),
+            rows -> rows.size() == 3);
+
+    ResponseEntity<ApplicationHistoryResponse> historyResponse =
+        restTemplate.exchange(
+            "http://localhost:"
+                + port
+                + "/api/v0/applications/"
+                + applicationId
+                + "/history-search",
+            HttpMethod.GET,
+            new HttpEntity<>(headers()),
+            ApplicationHistoryResponse.class);
+    assertThat(historyResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    assertThat(historyResponse.getBody().getPriorAuthorities()).hasSize(2);
+
+    PriorAuthorityHistoryGroup assignedGroup =
+        historyResponse.getBody().getPriorAuthorities().stream()
+            .filter(g -> g.getPriorAuthorityId().equals(secondPriorAuthorityId))
+            .findFirst()
+            .orElseThrow();
+    assertThat(assignedGroup.getPriorAuthorityType()).isEqualTo(PriorAuthorityType.EXPERT);
+    assertThat(assignedGroup.getEvents()).hasSize(2);
+    assertThat(assignedGroup.getEvents())
+        .extracting(event -> event.getEventType())
+        .containsExactlyInAnyOrder("PRIOR_AUTHORITY_SUBMITTED", "ASSIGN_APPLICATION_TO_CASEWORKER");
+
+    assertThat(assignedGroup.getEvents())
+        .extracting(event -> event.getCaseworkerId())
+        .allSatisfy(
+            caseworkerId -> assertThat(caseworkerId).isEqualTo(TestJwtDecoderConfig.CASEWORKER_ID));
+
+    PriorAuthorityHistoryGroup untouchedGroup =
+        historyResponse.getBody().getPriorAuthorities().stream()
+            .filter(g -> g.getPriorAuthorityId().equals(firstPriorAuthorityId))
+            .findFirst()
+            .orElseThrow();
+    assertThat(untouchedGroup.getPriorAuthorityType()).isEqualTo(PriorAuthorityType.EXPERT);
+    assertThat(untouchedGroup.getEvents()).hasSize(1);
+    assertThat(untouchedGroup.getEvents().getFirst().getEventType())
+        .isEqualTo("PRIOR_AUTHORITY_SUBMITTED");
   }
 
   @Test
@@ -1802,15 +1951,15 @@ class PostgresAxonIntegrationTest {
         """
         INSERT INTO axon.prior_authority_history
             (event_id, application_id, prior_authority_id, prior_authority_type,
-             event_type, event_data, service_name, occurred_at)
-        VALUES (?, ?, ?, ?, ?, ?::jsonb, ?, ?)
+             event_type, item_version, service_name, occurred_at)
+        VALUES (?, ?, ?, ?, ?, ?, ?, ?)
         """,
         "conflict-evt-1",
         applicationId,
         priorAuthorityId,
         "EXPERT",
         "PRIOR_AUTHORITY_SUBMITTED",
-        "{\"status\":\"PENDING\",\"dataVersion\":0}",
+        2L,
         "CIVIL_APPLY",
         OffsetDateTime.parse("2026-08-01T09:00:00Z"));
 
@@ -1818,15 +1967,15 @@ class PostgresAxonIntegrationTest {
         """
         INSERT INTO axon.prior_authority_history
             (event_id, application_id, prior_authority_id, prior_authority_type,
-             event_type, event_data, service_name, occurred_at)
-        VALUES (?, ?, ?, ?, ?, ?::jsonb, ?, ?)
+             event_type, item_version, service_name, occurred_at)
+        VALUES (?, ?, ?, ?, ?, ?, ?, ?)
         """,
         "conflict-evt-2",
         applicationId,
         priorAuthorityId,
         "COUNSEL",
         "PRIOR_AUTHORITY_SUBMITTED",
-        "{\"status\":\"PENDING\",\"dataVersion\":0}",
+        2L,
         "CIVIL_APPLY",
         OffsetDateTime.parse("2026-08-01T10:00:00Z"));
 
@@ -1858,6 +2007,69 @@ class PostgresAxonIntegrationTest {
     }
   }
 
+  @Test
+  void
+      givenSubmittedPriorAuthorityWithUploadedDocument_whenGetHistory_thenIncludesDocumentUploadedEvent() {
+    UUID applicationId = UUID.randomUUID();
+    UUID priorAuthorityId = UUID.randomUUID();
+
+    jdbcTemplate.update(
+        """
+        INSERT INTO axon.prior_authority_history
+            (event_id, application_id, prior_authority_id, prior_authority_type,
+             event_type, item_version, service_name, occurred_at)
+        VALUES (?, ?, ?, ?, ?, ?, ?, ?)
+        """,
+        "pa-submit-evt-1",
+        applicationId,
+        priorAuthorityId,
+        "EXPERT",
+        "PRIOR_AUTHORITY_SUBMITTED",
+        2L,
+        "CIVIL_APPLY",
+        OffsetDateTime.parse("2026-09-18T10:00:00Z"));
+
+    jdbcTemplate.update(
+        """
+        INSERT INTO axon.prior_authority_history
+            (event_id, application_id, prior_authority_id, prior_authority_type,
+             event_type, item_version, service_name, occurred_at)
+        VALUES (?, ?, ?, ?, ?, ?, ?, ?)
+        """,
+        "pa-upload-evt-1",
+        applicationId,
+        priorAuthorityId,
+        "EXPERT",
+        "PRIOR_AUTHORITY_DOCUMENT_UPLOADED",
+        2L,
+        "CIVIL_APPLY",
+        OffsetDateTime.parse("2026-09-18T11:00:00Z"));
+
+    ResponseEntity<ApplicationHistoryResponse> historyResponse =
+        restTemplate.exchange(
+            "http://localhost:"
+                + port
+                + "/api/v0/applications/"
+                + applicationId
+                + "/history-search",
+            HttpMethod.GET,
+            new HttpEntity<>(headers()),
+            ApplicationHistoryResponse.class);
+    assertThat(historyResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    assertThat(historyResponse.getBody().getPriorAuthorities()).hasSize(1);
+    PriorAuthorityHistoryGroup group = historyResponse.getBody().getPriorAuthorities().get(0);
+    assertThat(group.getPriorAuthorityId()).isEqualTo(priorAuthorityId);
+    assertThat(group.getPriorAuthorityType()).isEqualTo(PriorAuthorityType.EXPERT);
+    assertThat(group.getEvents())
+        .extracting(event -> event.getEventType())
+        .contains("PRIOR_AUTHORITY_SUBMITTED", "PRIOR_AUTHORITY_DOCUMENT_UPLOADED");
+    assertThat(group.getEvents())
+        .filteredOn(event -> event.getEventType().equals("PRIOR_AUTHORITY_DOCUMENT_UPLOADED"))
+        .singleElement()
+        .satisfies(event -> assertThat(event.getCaseworkerId()).isNull());
+  }
+
   private CreatePriorAuthorityDraftRequest fixedRateExpertDraftRequest(UUID applicationId) {
     return CreatePriorAuthorityDraftRequest.builder()
         .applicationId(applicationId)
@@ -1871,7 +2083,7 @@ class PostgresAxonIntegrationTest {
                 .expertCosts(
                     ExpertCosts.builder()
                         .billingType(BillingType.FIXED_RATE)
-                        .totalAmount(900.0)
+                        .totalAmount(BigDecimal.valueOf(900.0))
                         .costsSharedWithOtherParties(false)
                         .build())
                 .build())
@@ -1882,11 +2094,23 @@ class PostgresAxonIntegrationTest {
     return headers(1);
   }
 
+  private HttpHeaders headers(String bearerToken) {
+    return headers(1, bearerToken);
+  }
+
   private HttpHeaders headers(int schemaVersion) {
     HttpHeaders headers = new HttpHeaders();
     headers.set("X-Service-Name", "CIVIL_APPLY");
     headers.set("X-Schema-Version", String.valueOf(schemaVersion));
     headers.setBearerAuth(TestJwtDecoderConfig.BEARER_TOKEN);
+    return headers;
+  }
+
+  private HttpHeaders headers(int schemaVersion, String bearerAuthToken) {
+    HttpHeaders headers = new HttpHeaders();
+    headers.set("X-Service-Name", "CIVIL_APPLY");
+    headers.set("X-Schema-Version", String.valueOf(schemaVersion));
+    headers.setBearerAuth(bearerAuthToken);
     return headers;
   }
 
@@ -1917,7 +2141,7 @@ class PostgresAxonIntegrationTest {
     return proceeding;
   }
 
-  private ResponseEntity<ApplicationResponse> awaitGet(UUID applicationId) throws Exception {
+  private ResponseEntity<ApplicationResponse> awaitGetApplication(UUID applicationId) {
     ResponseEntity<String> response =
         await()
             .alias("application to be available from the query projection: " + applicationId)
@@ -1937,35 +2161,7 @@ class PostgresAxonIntegrationTest {
         response.getStatusCode());
   }
 
-  private ApplicationReadModel awaitProjection(UUID applicationId) {
-    return await()
-        .alias("application projection to be populated for " + applicationId)
-        .atMost(15, TimeUnit.SECONDS)
-        .pollInterval(100, TimeUnit.MILLISECONDS)
-        .until(
-            () ->
-                queryGateway
-                    .query(new FindApplicationByIdQuery(applicationId), ApplicationReadModel.class)
-                    .join(),
-            java.util.Objects::nonNull);
-  }
-
-  private ApplicationReadModel awaitProjectionVersion(UUID applicationId, long version) {
-    return await()
-        .alias("application projection to reach version " + version + " for " + applicationId)
-        .atMost(15, TimeUnit.SECONDS)
-        .pollInterval(100, TimeUnit.MILLISECONDS)
-        .until(
-            () ->
-                queryGateway
-                    .query(new FindApplicationByIdQuery(applicationId), ApplicationReadModel.class)
-                    .join(),
-            projected -> projected != null && projected.getApplicationDataVersion() == version);
-  }
-
-  private java.util.List<
-          uk.gov.justice.laa.dstew.access.query.application.history.ApplicationHistoryReadModel>
-      awaitHistory(UUID applicationId, int expectedCount) {
+  private List<ApplicationHistoryReadModel> awaitHistory(UUID applicationId, int expectedCount) {
     return await()
         .alias(
             "application history projection to contain "
@@ -1996,19 +2192,8 @@ class PostgresAxonIntegrationTest {
               List<String> actual =
                   history.stream().map(ApplicationHistoryReadModel::getEventType).toList();
               return actual.size() == expected.size()
-                  && new java.util.HashSet<>(actual).equals(new java.util.HashSet<>(expected));
+                  && new HashSet<>(actual).equals(new HashSet<>(expected));
             });
-  }
-
-  private void assertRejectedApplicationWasRolledBack(UUID applicationId) {
-    Integer eventCount =
-        jdbcTemplate.queryForObject(
-            "SELECT COUNT(*) FROM axon.domain_event_entry WHERE aggregate_identifier = ?",
-            Integer.class,
-            applicationId.toString());
-    assertThat(eventCount).isZero();
-    assertThat(applicationReadRepository.findById(applicationId)).isEmpty();
-    assertThat(applicationHistoryReadRepository.countByApplicationId(applicationId)).isZero();
   }
 
   private static List<String> expectedMigrationVersions() throws IOException {
